--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=back
 
 #DB connection settings
-#spring.datasource.url=jdbc:mysql://143.95.79.239:3306/grupocis_evaluacionTiempos?verifyServerCertificate=false&useSSL=false&requireSSL=false
-#spring.datasource.username=grupocis_evaluacionTiempos
-#spring.datasource.password=CISE2011$
-spring.datasource.url=jdbc:mysql://localhost:3306/evaluacion_tiempos
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://143.95.79.239:3306/grupocis_Evaluacion_Tiempos2.0?verifyServerCertificate=false&useSSL=false&requireSSL=false
+spring.datasource.username=grupocis_evaluacionTiempos
+spring.datasource.password=CISE2011$
+#spring.datasource.url=jdbc:mysql://localhost:3306/evaluacion_tiempos
+#spring.datasource.username=root
+#spring.datasource.password=root
 
 #JPA settings
 spring.jpa.show-sql=false
