Adding redis worklock and model updates

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ MOTOR-IP=35.232.31.50
 MOTOR-PORT=8000
 SAP-CLIENT=300
 MOTOR-BASE-URI=http://${MOTOR-IP}:${MOTOR-PORT}
+
+#REDIS
+REDIS-HOST=localhost
+REDIS-PORT=6379
