logic changes and added missing properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 spring.application.name=back
 
+server.port = 8081
 #DB connection settings
 spring.datasource.url=jdbc:mysql://143.95.79.239:3306/grupocis_Evaluacion_Tiempos2.0?verifyServerCertificate=false&useSSL=false&requireSSL=false
 spring.datasource.username=grupocis_evaluacionTiempos
 spring.datasource.password=CISE2011$
+spring.datasource.hikari.maximum-pool-size=7
+spring.datasource.hikari.minimum-idle=15
+spring.datasource.hikari.max-lifetime=120000
+spring.datasource.hikari.pool-name=HikariConnPoolCise
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.connection-timeout=20000
 #spring.datasource.url=jdbc:mysql://localhost:3306/evaluacion_tiempos
 #spring.datasource.username=root
 #spring.datasource.password=root
