Updating logic to save vacations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,14 +21,14 @@ spring.jpa.hibernate.ddl-auto=update
 
 #Custom settings
 #QA
-#MOTOR-IP=35.239.145.242
-#MOTOR-US=x-jperez
-#MOTOR-PASS=Cise_202406
+MOTOR-IP=35.239.145.242
+MOTOR-US=x-jperez
+MOTOR-PASS=Cise_202406
 
 #PROD
-MOTOR-IP=35.232.31.50
-MOTOR-US=x-jperez
-MOTOR-PASS=Cise_202406$
+#MOTOR-IP=35.232.31.50
+#MOTOR-US=x-jperez
+#MOTOR-PASS=Cise_202406$
 
 #GENERAL
 SAP-CLIENT=300
