--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=back
-
+spring.codec.max-in-memory-size=10MB
+spring.mvc.async.request-timeout=60000
 server.port = 8081
 #DB connection settings
 spring.datasource.url=jdbc:mysql://143.95.79.239:3306/grupocis_Evaluacion_Tiempos2.0?verifyServerCertificate=false&useSSL=false&requireSSL=false
@@ -21,14 +22,14 @@ spring.jpa.hibernate.ddl-auto=update
 
 #Custom settings
 #QA
-MOTOR-IP=35.239.145.242
-MOTOR-US=x-jperez
-MOTOR-PASS=Cise_202406
+#MOTOR-IP=35.239.145.242
+#MOTOR-US=x-jperez
+#MOTOR-PASS=Cise_202406
 
 #PROD
-#MOTOR-IP=35.232.31.50
-#MOTOR-US=x-jperez
-#MOTOR-PASS=Cise_202406$
+MOTOR-IP=35.232.31.50
+MOTOR-US=x-jperez
+MOTOR-PASS=Cise_202406$
 
 #GENERAL
 SAP-CLIENT=300
@@ -38,3 +39,7 @@ MOTOR-BASE-URI=http://${MOTOR-IP}:${MOTOR-PORT}
 #REDIS
 REDIS-HOST=localhost
 REDIS-PORT=6379
+
+#LOGIN
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
