--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,14 +22,14 @@ spring.jpa.hibernate.ddl-auto=update
 
 #Custom settings
 #QA
-#MOTOR-IP=35.239.145.242
-#MOTOR-US=x-jperez
-#MOTOR-PASS=Cise_202406
+MOTOR-IP=35.239.145.242
+MOTOR-US=x-jperez
+MOTOR-PASS=Cise_202406
 
 #PROD
-MOTOR-IP=35.232.31.50
-MOTOR-US=x-jperez
-MOTOR-PASS=Cise_202406$
+#MOTOR-IP=35.232.31.50
+#MOTOR-US=x-jperez
+#MOTOR-PASS=Cise_202406$
 
 #GENERAL
 SAP-CLIENT=300
@@ -41,5 +41,5 @@ REDIS-HOST=localhost
 REDIS-PORT=6379
 
 #LOGIN
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=DEBUG
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=INFO
