--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=back
 spring.codec.max-in-memory-size=10MB
 spring.mvc.async.request-timeout=60000
 server.port = 8081
+
 #DB connection settings
 spring.datasource.url=jdbc:mysql://143.95.79.239:3306/grupocis_Evaluacion_Tiempos2.0?verifyServerCertificate=false&useSSL=false&requireSSL=false
 spring.datasource.username=grupocis_evaluacionTiempos
@@ -19,17 +20,19 @@ spring.datasource.hikari.connection-timeout=20000
 #JPA settings
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.connection.release_mode=after_transaction
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #Custom settings
 #QA
-MOTOR-IP=35.239.145.242
-MOTOR-US=x-jperez
-MOTOR-PASS=Cise_202406
+#MOTOR-IP=35.239.145.242
+#MOTOR-US=x-jperez
+#MOTOR-PASS=Cise_202409
 
 #PROD
-#MOTOR-IP=35.232.31.50
-#MOTOR-US=x-jperez
-#MOTOR-PASS=Cise_202406$
+MOTOR-IP=35.232.31.50
+MOTOR-US=x-jperez
+MOTOR-PASS=Cise_202409$
 
 #GENERAL
 SAP-CLIENT=300
