--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,11 @@ spring.datasource.username=grupocis_evaluacionTiempos
 spring.datasource.password=CISE2011$
 spring.datasource.hikari.maximum-pool-size=7
 spring.datasource.hikari.minimum-idle=15
+spring.datasource.hikari.idle-timeout=120000
 spring.datasource.hikari.max-lifetime=120000
 spring.datasource.hikari.pool-name=HikariConnPoolCise
-spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost:3306/evaluacion_tiempos
 #spring.datasource.username=root
 #spring.datasource.password=root
@@ -21,6 +22,7 @@ spring.datasource.hikari.connection-timeout=20000
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.connection.release_mode=after_transaction
+spring.jpa.open-in-view=false
 
 #Custom settings
 #QA
