--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,19 +26,16 @@ spring.jpa.open-in-view=false
 
 #Custom settings
 #QA
-MOTOR-IP=35.239.145.242
 MOTOR-US=x-jperez
 MOTOR-PASS=Cise_202411
 
 #PROD
-#MOTOR-IP=35.232.31.50
 #MOTOR-US=x-jperez
 #MOTOR-PASS=Cise_202411$
 
 #GENERAL
 SAP-CLIENT=300
-MOTOR-PORT=8000
-MOTOR-BASE-URI=http://${MOTOR-IP}:${MOTOR-PORT}
+MOTOR-BASE-URI=https://seqa.grupo-iamsa.com.mx
 
 #REDIS
 REDIS-HOST=localhost
