--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,14 +26,14 @@ spring.jpa.open-in-view=false
 
 #Custom settings
 #QA
-#MOTOR-US=x-jperez
-#MOTOR-PASS=Cise_202502
-#MOTOR-BASE-URI=https://seqa.grupo-iamsa.com.mx
+MOTOR-US=x-jperez
+MOTOR-PASS=Cise_202507$
+MOTOR-BASE-URI=https://seqa.grupo-iamsa.com.mx
 
 #PROD
-MOTOR-US=x-jperez
-MOTOR-PASS=Cise_202502$
-MOTOR-BASE-URI=http://35.232.31.50:8000
+#MOTOR-US=x-jperez
+#MOTOR-PASS=Cise_202502$
+#MOTOR-BASE-URI=http://35.232.31.50:8000
 
 #GENERAL
 SAP-CLIENT=300
